# Frontier-Exploration-with-Four-Robots

./: LICENSE  README.md
explore_map/: CMakeLists.txt  package.xml
explore_map/include/exploration_manager/: exploration_manager.hpp  k_means.hpp
explore_map/src/: exploration_manager.cpp  exploration_manager_node.cpp
